# cp-lib

./: .gitignore  CMakeLists.txt  Makefile  array.cc  array.json  array_test.cc  benchmark.cc  input.cc  input.json  input_test.cc  integer.cc  integer.json  integer_test.cc  math.cc  math.json  math_test.cc  output.cc  output.json  output_test.cc  primitive.cc  primitive.json  primitive_test.cc  settings.json
metadata-builder/: package-lock.json  package.json  tsconfig.json
metadata-builder/src/: _utils.ts  array.ts  index.ts  input.ts  integer.ts  math.ts  output.ts  primitive.ts
